--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'com.android.support:support-v4:28.0.0'
+    implementation 'com.jjoe64:graphview:4.2.2'
 
 //    implementation 'com.android.support:support-v4:20.0.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
